<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_view_qt</name>
  <version>1.0.0</version>
  <description>
  A simple viewer for ROS images using QT for the visualization.
  </description>

  <maintainer email="m.schratter@gmx.at">Markus Schratter</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>  
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>cv_bridge</depend> 
  <depend>OpenCV</depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5widgets5</depend>
  <depend>qt5-qmake</depend>
  <depend>Qt5Core</depend>
  <depend>Qt5Widgets</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-quick</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
